--- a/src/css/design-tokens.css
+++ b/src/css/design-tokens.css
@@ -62,7 +62,7 @@
   --brand-colors-red-red800: #64141c;
   --brand-colors-red-red900: #3a0c10;
   --brand-colors-purple-purple500: #8b45b6;
-  --brand-colors-violet-violet300: #CFB5F0;
+  --brand-colors-violet-violet300: #cfb5f0;
   --brand-colors-yellow-yellow000: #fffdf8;
   --brand-colors-yellow-yellow100: #fefcde;
   --brand-colors-yellow-yellow200: #fff2c5;
@@ -262,15 +262,15 @@
   --color-shadow-default: #0000001a;
   --color-primary-default: var(--brand-colors-blue-blue500);
   --color-primary-alternative: var(--brand-colors-blue-blue600);
-  --color-primary-muted: #037dd619;
+  --color-primary-muted: #7d4af719;
   --color-primary-inverse: var(--brand-colors-white-white010);
-  --color-primary-disabled: #037dd680;
-  --color-primary-shadow: #037dd633;
+  --color-primary-disabled: #7d4af780;
+  --color-primary-shadow: #7d4af733;
   --color-secondary-default: var(--brand-colors-orange-orange500);
   --color-secondary-alternative: var(--brand-colors-orange-orange600);
-  --color-secondary-muted: #f66a0a19;
+  --color-secondary-muted: #7d4af719;
   --color-secondary-inverse: var(--brand-colors-white-white010);
-  --color-secondary-disabled: #f66a0a80;
+  --color-secondary-disabled: #7d4af780;
   --color-error-default: var(--brand-colors-red-red500);
   --color-error-alternative: var(--brand-colors-red-red600);
   --color-error-muted: #d73a4919;
