--- a/src/css/design-tokens.css
+++ b/src/css/design-tokens.css
@@ -260,14 +260,14 @@
   --color-overlay-alternative: #000000cc;
   --color-overlay-inverse: var(--brand-colors-white-white010);
   --color-shadow-default: #0000001a;
-  --color-primary-default: var(--brand-colors-blue-blue500);
-  --color-primary-alternative: var(--brand-colors-blue-blue600);
+  --color-primary-default: #7d4af7;
+  --color-primary-alternative: #5f35c1;
   --color-primary-muted: #7d4af719;
   --color-primary-inverse: var(--brand-colors-white-white010);
   --color-primary-disabled: #7d4af780;
   --color-primary-shadow: #7d4af733;
-  --color-secondary-default: var(--brand-colors-orange-orange500);
-  --color-secondary-alternative: var(--brand-colors-orange-orange600);
+  --color-secondary-default: #7d4af7;
+  --color-secondary-alternative: #5f35c1;
   --color-secondary-muted: #7d4af719;
   --color-secondary-inverse: var(--brand-colors-white-white010);
   --color-secondary-disabled: #7d4af780;
@@ -333,17 +333,17 @@
   --color-overlay-alternative: #000000cc;
   --color-shadow-default: #00000080;
   --color-overlay-inverse: var(--brand-colors-white-white010);
-  --color-primary-default: var(--brand-colors-blue-blue400);
-  --color-primary-alternative: var(--brand-colors-blue-blue300);
-  --color-primary-muted: #1098fc26;
+  --color-primary-default: #7d4af7;
+  --color-primary-alternative: #9d7af1;
+  --color-primary-muted: #7d4af726;
   --color-primary-inverse: var(--brand-colors-white-white010);
-  --color-primary-disabled: #1098fc80;
-  --color-primary-shadow: #037dd633;
-  --color-secondary-default: var(--brand-colors-orange-orange400);
-  --color-secondary-alternative: var(--brand-colors-orange-orange300);
-  --color-secondary-muted: #f8883b26;
+  --color-primary-disabled: #7d4af780;
+  --color-primary-shadow: #7d4af733;
+  --color-secondary-default: #7d4af7;
+  --color-secondary-alternative: #9d7af1;
+  --color-secondary-muted: #7d4af726;
   --color-secondary-inverse: var(--brand-colors-white-white010);
-  --color-secondary-disabled: #f8883b80;
+  --color-secondary-disabled: #7d4af780;
   --color-error-default: var(--brand-colors-red-red500);
   --color-error-alternative: var(--brand-colors-red-red400);
   --color-error-muted: #d73a4926;
